--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pillow = "^10.3.0"
 django-jazzmin = "^3.0.0"
 gunicorn = "^22.0.0"
 psycopg2 = "^2.9.9"
+psycopg2-binary = "^2.9.9"
 
 
 [build-system]
